2002-10-17  Duncan Mak  <duncan@ximian.com>

	* CultureInfo.cs (TextInfo): return a TextInfo in the property.

	* TextInfo.cs (ToLower):
	(ToTitleCase): Implemented.

2002-09-12  Dick Porter  <dick@ximian.com>

	* ThaiBuddhistCalendar.cs: 
	* TextInfo.cs: 
	* TaiwanCalendar.cs: 
	* RegionInfo.cs: 
	* KoreanCalendar.cs: 
	* JulianCalendar.cs: 
	* JapaneseCalendar.cs: 
	* HijriCalendar.cs: 
	* HebrewCalendar.cs: 
	* GregorianCalendar.cs: 
	* CultureInfo.cs: 
	* CompareInfo.cs: Stub out missing methods

2002-08-15  Tim Coleamn <tim@timcoleman.com>
	* CompareInfo.cs:
		Stubbed out some methods.

2002-08-14  Dick Porter  <dick@ximian.com>

	* CultureInfo.cs: Implement Name, stub out all the other missing
	methods.

	* TextInfo.cs: Stubbed out this class

2002-06-12  Nick Drochak  <ndrochak@gol.com>

	* DateTimeFormatInfo.cs: Reformat.

2002-06-11  Nick Drochak  <ndrochak@gol.com>

	* NumberFormatInfo.cs: Make NumberNegativePattern = 1 for the ctor

2002-06-07  Nick Drochak  <ndrochak@gol.com>

	* NumberFormatInfo.cs: Make InvariantInfo.NumberNegativePattern = 1

2002-05-07  Rodrigo Moya <rodrigo@ximian.com>

	* CompareInfo.cs: new basic stub (compiles on Linux, so I assume
	it does not break the build on windows. Sorry if it does).

2002-04-23  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* NumberFormatInfo.cs: always set the values for the invariant culture
	until there are more cultures supported.

2002-04-22  Nick Drochak  <ndrochak@gol.com>

	* NumberStyles.cs: Add [Serializable].

2002-04-08  Nick Drochak  <ndrochak@gol.com>

	* UnicodeCategory.cs: Fix typos in enum names.

2002-03-04  Nick Drochak  <ndrochak@gol.com>

	* JulianCalendar.cs: JulianEra should be field, not a property.
	Thanks CorCompare (and Piers).

2002-02-12  Duncan Mak  <duncan@ximian.com>

	* CultureInfo.cs: Added the Calendar property to make the TimeZone
	class build. It's marked as MonoTODO.

2002-02-12  Nick Drochak  <ndrochak@gol.com>

	* UnicodeCategory.cs: Fix typo.
